# rust-slic

./: .gitignore  Cargo.toml  index.html  index.js  package.json  webpack.config.js
src/: lbp.rs  lib.rs  main.rs  slic.rs
